ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: atlantis
      port:
        number: 4000
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /atlantis
        pathType: Prefix
        backend:
          service:
            name: atlantis
            port:
              number: 4000
